--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,11 @@
 <body>
     
     <h1>DATA ANALYSIS</h1>
+
+    <img src="../Images/image 2.webp" alt="Image">
+
+    <p>Data analysis is a process of inspecting, cleansing, transforming, and modeling data to discover useful information, draw conclusions, and support decision-making. It involves various techniques and methodologies to interpret data from various sources in different formats, both structured and unstructured.</p>
+    <p>Data analysis has multiple facets and approaches, encompassing diverse techniques under a variety of names, and is used in different business, science, and social science domains. In today's business world, data analysis plays a role in making decisions more scientific and helping businesses operate more effectively</p>
     
 </body>
 </html>
