--- a/Index.html
+++ b/Index.html
@@ -7,8 +7,14 @@
 </head>
 
 <body>
-    
+ 
     <h1>DATA ANALYSIS</h1>
+
+    <nav>
+        <a href="Pages/Aboutus.html">ABOUT US</a>
+        <a href="Pages/Contact.html">CONTACTS</a>
+        <a href="Pages/Services.html">SERVICES</a>
+    </nav>
 
     <img src="../Images/image 2.webp" alt="Image">
 
