Added unordered list

--- a/Index.html
+++ b/Index.html
@@ -4,22 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DATA ANALYSIS</title>
+
+    <!--link to css file-->
+    <link rel="stylesheet" href="Stylesheet/Main.css">
+    <link rel="stylesheet" href="Stylesheet/Style.css">
+
 </head>
 
 <body>
  
     <h1>DATA ANALYSIS</h1>
 
+    <!--Links to Pages folder-->
     <nav>
         <a href="Pages/Aboutus.html">ABOUT US</a>
         <a href="Pages/Contact.html">CONTACTS</a>
         <a href="Pages/Services.html">SERVICES</a>
     </nav>
 
+    <!--An image-->
     <img src="../Images/image 2.webp" alt="Image">
 
+    <!--Paragraphs-->
     <p>Data analysis is a process of inspecting, cleansing, transforming, and modeling data to discover useful information, draw conclusions, and support decision-making. It involves various techniques and methodologies to interpret data from various sources in different formats, both structured and unstructured.</p>
     <p>Data analysis has multiple facets and approaches, encompassing diverse techniques under a variety of names, and is used in different business, science, and social science domains. In today's business world, data analysis plays a role in making decisions more scientific and helping businesses operate more effectively</p>
+
+    <!--heading 2-->
+    <h2>OBJECTIVES OF DATA ANALYSIS</h2>
+
+    <ul>
+        <li>Answering questions and solving problems.</li>
+        <li>Uncovering hidden patterns and correlations within data.</li>
+        <li>Supporting decision-making processes.</li>
+        <li>Assessing and improving data quality.</li>
+        <li>Comparing target populations with study populations.</li>
+    </ul>
     
 </body>
 </html>
