--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,6 @@
 
     <!--link to css file-->
     <link rel="stylesheet" href="Stylesheet/Main.css">
-    <link rel="stylesheet" href="Stylesheet/Style.css">
 
 </head>
 
@@ -32,6 +31,7 @@
     <!--heading 2-->
     <h2>OBJECTIVES OF DATA ANALYSIS</h2>
 
+    <!--Unordered list-->
     <ul>
         <li>Answering questions and solving problems.</li>
         <li>Uncovering hidden patterns and correlations within data.</li>
