--- a/Pages/Aboutus.html
+++ b/Pages/Aboutus.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DATA ANALYSIS</title>
 </head>
+
 <body>
+    
+    <h1>DATA ANALYSIS</h1>
     
 </body>
 </html>
