--- a/Pages/Aboutus.html
+++ b/Pages/Aboutus.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DATA ANALYSIS</title>
+
+    <!--link to external css-->
+    <link rel="stylesheet" href="../Stylesheet/Aboutus.css">
 </head>
 
 <body>
     
     <h1>DATA ANALYSIS</h1>
+
+    <!--paragraph-->
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br>
+        Nisi aperiam neque ullam ipsa illo voluptate vitae omnis sequi perferendis architecto.<br>
+        Itaque eos, quibusdam qui modi voluptatum amet non totam fuga.</p>
     
 </body>
 </html>
