--- a/Index.html
+++ b/Index.html
@@ -41,6 +41,11 @@
         <li>Assessing and improving data quality.</li>
         <li>Comparing target populations with study populations.</li>
     </ul>
+
+    <!--footer-->
+    <footer>
+        <p>&copy; 2025 Data Analytics</p>
+    </footer>
     
 </body>
 </html>
