--- a/Pages/Aboutus.html
+++ b/Pages/Aboutus.html
@@ -3,20 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DATA ANALYSIS</title>
+    <title>About us</title>
 
     <!--link to external css-->
     <link rel="stylesheet" href="../Stylesheet/Aboutus.css">
+
+    <!--link to home page-->
+    <a href="../Index.html">Home</a>
+
 </head>
 
 <body>
     
-    <h1>DATA ANALYSIS</h1>
+    <h2>About us</h1>
+ 
+        <div>
+            <p>We are a team dedicated to providing data analytics services.</p>
+        </div>
 
-    <!--paragraph-->
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br>
-        Nisi aperiam neque ullam ipsa illo voluptate vitae omnis sequi perferendis architecto.<br>
-        Itaque eos, quibusdam qui modi voluptatum amet non totam fuga.</p>
-    
+        <!--div class = mission-->
+        <div class="mission">
+            <h3>Our mission</h3>
+            <p>To provides a roadmap for data-related initiatives, including data collection, storage, analysis, governance, and utilization.</p>
+        </div>
+
+        <!--div class = vission-->
+        <div class="vision">
+            <h3>Our vision</h3>
+            <p>To provide a clear and compelling picture of how data will be leveraged to drive innovation, enhance decision-making, and achieve business goals.</p>
+        </div>
+
+        <!--div class = values-->
+        <div class="values">
+            <h3>Our values</h3>
+
+            <!--unordered list-->
+            <ul>
+                <li>Integrity</li>
+                <li>Teamwork</li>
+                <li>Innovation</li>
+            </ul>
+        </div>
+
+        <!--footer-->
+        <footer>
+            <p>&copy; 2025 Data Analytics</p>
+        </footer>
+
 </body>
 </html>
