--- a/Pages/Services.html
+++ b/Pages/Services.html
@@ -3,14 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DATA ANALYSIS</title>
+    <title>Services</title>
 
     <!--link to external css-->
     <link rel="stylesheet" href="../Stylesheet/Services.css">
 
+    <!--link to home page-->
+    <a href="../Index.html">Home</a>
+
 </head>
 
 <body>
+    <h2>Services</h2>
+
+    <!--div class = service-->
+    <div class="service">
+        <h3>Advanced Data Analytics</h3>
+        <p>Our advanced data analytics consulting service not only identifies hidden patterns and trends within your data but also provides you with a comprehensive understanding of your customers, operations, and market dynamics. It helps drive innovation, optimize processes, and enhance customer satisfaction, ultimately leading to increased revenue and growth.</p>
+    </div>
+
+    <div class="service">
+        <h3>Data Visualization</h3>
+        <p>With our data visualization services, we bring your data to life, transforming complex information into intuitive and compelling visual representations. Our data visualization services are designed to bridge the gap between raw data and actionable knowledge, providing you with the tools to make informed decisions with ease.</p>
+    </div>
+
+    <div class="service">
+        <h3>Data Transformation</h3>
+        <p>We excel in transforming raw and unorganized data into meaningful and actionable insights that drive business value. Our data experts use their expertise and cutting-edge tools to cleanse, integrate, and harmonize your data from various sources.<br>
+        <p>We streamline the process of data extraction, data cleansing, data modeling, and data enrichment, ensuring that your data is accurate, consistent, and ready for analysis.</p>
+        <p>Whether it's migrating to a new data platform, integrating data from multiple systems, or preparing data for advanced analytics, we have the expertise to deliver optimal results.</p>
+        <p>With our data transformation services, you can optimize data storage, reduce data redundancy, and ensure data consistency across your enterprise. Book a call now to drive data-driven innovation, improve operational efficiency, and unlock new avenues of growth.</p>
+    </div>
+
+    <div class="service">
+        <h3>Enterprise Data Management</h3>
+        <p>Our data experts understand the challenges of handling vast volumes of data. We employ industry-leading practices and the latest tools to streamline your data ecosystem, ensuring data quality, integrity, security, and governance throughout its lifecycle.</p>
+        <p>We provide end-to-end solutions tailored to your specific business needs, enabling you to break down data silos, improve data accessibility, and drive consistent and accurate decision-making. </p>
+        <p>By implementing tools like master data management, data integration, and data warehousing, we provide a holistic solution that enhances data quality, consistency, security, and compliance across your enterprise. Let us architect your data ecosystem into a powerful mechanism that drives strategic growth and adapts to your business requirements.</p>
+    </div>
+
+    <!--footer-->
+    <footer>
+        <p>&copy; 2025 Data Analytics</p>
+    </footer>
     
 </body>
 </html>
