--- a/Pages/Contact.html
+++ b/Pages/Contact.html
@@ -8,18 +8,28 @@
     <!--link to external css-->
     <link rel="stylesheet" href="../Stylesheet/Contact.css">
 
+    <!--link to home page-->
+    <a href="../Index.html">Home</a>
+
 </head>
 
-<h2>Contact us</h2>
-
-<div>
-    <p>If you have any questions, kindly contact us</p>
-    <p><strong>Email:</strong>dataanalytics@gmail.com</p>
-    <p><strong>Phone no:</strong>012 235565</p>
-    <p><strong>Address:</strong>2363 30300-Eldoret</p>
-   </div>
-
 <body>
+
+<!--heading 2-->
+ <h2>Contact us</h2>
+
+<!--paragraphs-->
+<div>
+    <p>If you have any questions, kindly contact us:</p>
+    <p><strong>Email:</strong> dataanalytics@gmail.com</p>
+    <p><strong>Phone no:</strong> 012 235565</p>
+    <p><strong>Address:</strong> 2363 30300-Eldoret</p>
+</div>
+
+<!--footer-->
+<footer>
+    <p>&copy; 2025 Data Analytics</p>
+</footer>
     
 </body>
 </html>
