Added the header section

--- a/Index.html
+++ b/Index.html
@@ -12,8 +12,12 @@
 
 <body>
  
-    <h1>DATA ANALYSIS</h1>
-
+    <!--header-->
+    <header>
+         <h1>DATA ANALYSIS</h1>
+         <p>Welcome to data analysis site</p>
+    </header>
+   
     <!--Links to Pages folder-->
     <nav>
         <a href="Pages/Aboutus.html">ABOUT US</a>
