Added the dropdown menu in the services

--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,17 @@
     <nav>
         <a href="Pages/Aboutus.html">ABOUT US</a>
         <a href="Pages/Contact.html">CONTACTS</a>
-        <a href="Pages/Services.html">SERVICES</a>
+
+        <!--Services Dropdown-->
+        <div class="dropdown">
+            <a href="Pages/Services.html" class="dropdown-toggle">SERVICES</a>
+            <div class="dropdown-content">
+                <a href="Pages/Services.html#advanced-analytics">Advanced Data Analytics</a>
+                <a href="Pages/Services.html#data-visualization">Data Visualization</a>
+                <a href="Pages/Services.html#data-transformation">Data Transformation</a>
+                <a href="Pages/Services.html#enterprise-management">Enterprise Data Management</a>
+            </div>
+        </div>
     </nav>
 
     <!--An image-->
