--- a/Pages/Services.html
+++ b/Pages/Services.html
@@ -17,17 +17,17 @@
     <h2>Services</h2>
 
     <!--div class = service-->
-    <div class="service">
+    <div class="service" id="advanced-analytics">
         <h3>Advanced Data Analytics</h3>
         <p>Our advanced data analytics consulting service not only identifies hidden patterns and trends within your data but also provides you with a comprehensive understanding of your customers, operations, and market dynamics. It helps drive innovation, optimize processes, and enhance customer satisfaction, ultimately leading to increased revenue and growth.</p>
     </div>
 
-    <div class="service">
+    <div class="service" id="data-visualization">
         <h3>Data Visualization</h3>
         <p>With our data visualization services, we bring your data to life, transforming complex information into intuitive and compelling visual representations. Our data visualization services are designed to bridge the gap between raw data and actionable knowledge, providing you with the tools to make informed decisions with ease.</p>
     </div>
 
-    <div class="service">
+    <div class="services" id="data-transformation">
         <h3>Data Transformation</h3>
         <p>We excel in transforming raw and unorganized data into meaningful and actionable insights that drive business value. Our data experts use their expertise and cutting-edge tools to cleanse, integrate, and harmonize your data from various sources.<br>
         <p>We streamline the process of data extraction, data cleansing, data modeling, and data enrichment, ensuring that your data is accurate, consistent, and ready for analysis.</p>
@@ -35,7 +35,7 @@
         <p>With our data transformation services, you can optimize data storage, reduce data redundancy, and ensure data consistency across your enterprise. Book a call now to drive data-driven innovation, improve operational efficiency, and unlock new avenues of growth.</p>
     </div>
 
-    <div class="service">
+    <div class="service" id="enterprise-management">
         <h3>Enterprise Data Management</h3>
         <p>Our data experts understand the challenges of handling vast volumes of data. We employ industry-leading practices and the latest tools to streamline your data ecosystem, ensuring data quality, integrity, security, and governance throughout its lifecycle.</p>
         <p>We provide end-to-end solutions tailored to your specific business needs, enabling you to break down data silos, improve data accessibility, and drive consistent and accurate decision-making. </p>
